[gd_scene load_steps=11 format=3 uid="uid://b2vaqeiw3q18o"]

[ext_resource type="PackedScene" uid="uid://kniacsvw6ecd" path="res://nodes/templates/base_character.tscn" id="1_mphwr"]
[ext_resource type="Script" path="res://scripts/enemy_01.gd" id="2_ufcbe"]
[ext_resource type="Texture2D" uid="uid://bytgy7otax0fb" path="res://media/sprites/char2/SecondChar_idle.png" id="3_0yexx"]
[ext_resource type="AnimationLibrary" uid="uid://d0oivs2snrbj3" path="res://nodes/animations/enemy1.res" id="4_2tela"]
[ext_resource type="AnimationLibrary" uid="uid://d3yrwecnjsc81" path="res://nodes/animations/enemy.res" id="5_bgcjx"]
[ext_resource type="FontFile" uid="uid://di6hlk3rdui6r" path="res://media/fonts/NotoNaskhArabicUI-Regular.ttf" id="6_kh784"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jfq2"]
size = Vector2(128, 304)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1h3d5"]
size = Vector2(96, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oysbf"]
size = Vector2(96, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qvtx"]
size = Vector2(144, 304)

[node name="Enemy" groups=["character", "enemy"] instance=ExtResource("1_mphwr")]
collision_layer = 2
collision_mask = 15
script = ExtResource("2_ufcbe")
is_notarget = false

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_0yexx")
hframes = 4

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 0)
shape = SubResource("RectangleShape2D_8jfq2")

[node name="LpPos" parent="HitBoxPos" index="0"]
position = Vector2(168, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
"": ExtResource("4_2tela"),
"enemy": ExtResource("5_bgcjx")
}

[node name="Timer" type="Timer" parent="." index="5"]
editor_description = "Prevent lp() when ded"

[node name="LpRangeR" type="Area2D" parent="." index="7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LpRangeR" index="0"]
position = Vector2(136, 0)
shape = SubResource("RectangleShape2D_1h3d5")

[node name="LpRangeL" type="Area2D" parent="." index="8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LpRangeL" index="0"]
position = Vector2(-136, 0)
shape = SubResource("RectangleShape2D_1h3d5")

[node name="Attack01RangeR" type="Area2D" parent="." index="9"]
position = Vector2(256, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack01RangeR" index="0"]
position = Vector2(136, 0)
shape = SubResource("RectangleShape2D_oysbf")

[node name="Attack01RangeL" type="Area2D" parent="." index="10"]
position = Vector2(-592, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack01RangeL" index="0"]
position = Vector2(136, 0)
shape = SubResource("RectangleShape2D_oysbf")

[node name="DebugLabel" type="Label" parent="." index="11"]
offset_left = -128.0
offset_top = -264.0
offset_right = 144.0
offset_bottom = -208.0
theme_override_fonts/font = ExtResource("6_kh784")
theme_override_font_sizes/font_size = 39
text = "bob"

[node name="BounceTogether" type="Area2D" parent="." index="12"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceTogether" index="0"]
shape = SubResource("RectangleShape2D_8qvtx")

[node name="AttackTimer" type="Timer" parent="." index="13"]
wait_time = 0.5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="LpRangeR" to="." method="_on_lp_range_r_body_entered"]
[connection signal="body_exited" from="LpRangeR" to="." method="_on_lp_range_r_body_exited"]
[connection signal="body_entered" from="LpRangeL" to="." method="_on_lp_range_l_body_entered"]
[connection signal="body_exited" from="LpRangeL" to="." method="_on_lp_range_r_body_exited"]
[connection signal="body_entered" from="Attack01RangeR" to="." method="_on_attack_01_range_r_body_entered"]
[connection signal="body_exited" from="Attack01RangeR" to="." method="_on_attack_range_01r_body_exited"]
[connection signal="body_entered" from="Attack01RangeL" to="." method="_on_attack_01_range_l_body_entered"]
[connection signal="body_exited" from="Attack01RangeL" to="." method="_on_attack_range_01r_body_exited"]
[connection signal="body_entered" from="BounceTogether" to="." method="_on_bounce_together_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
